# IMUTracking2

./: CMakeLists.txt  CSVLoader.cpp  CSVLoader.h  README.md  main.cpp
DataLoading/: CSVLoader.cpp  CSVLoader.h  DataLoader.cpp  DataLoader.h
MathStuff/: Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Vector3.cpp  Vector3.h
Sensors/: MagnetometerProcessor.cpp  MagnetometerProcessor.h
Sensors/Accelerometer/: Accelerometer.cpp  Accelerometer.h  SimulatedAccelerometer.cpp  SimulatedAccelerometer.h
Sensors/Gyroscope/: Gyroscope.cpp  Gyroscope.h  SimulatedGyroscope.cpp  SimulatedGyroscope.h
Sensors/Magnetometer/: Magnetometer.cpp  Magnetometer.h  SimulatedMagnetometer.cpp  SimulatedMagnetometer.h
